correction mobile

--- a/web/src/scss/custom.scss
+++ b/web/src/scss/custom.scss
@@ -6431,7 +6431,7 @@ ul.notifications {
   .x_content {
     .btn {
       margin-bottom: 0;
-      min-width: 160px;
+      min-width: 180px;
     }
 
     .form-horizontal {
